--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #333;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +42,117 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.navigation {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.navigation h1 {
+  color: #f1356d;
+}
+.navigation .links {
+  margin-left: auto;
+}
+.navigation a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navigation a:hover {
+  color: #f1356d;
+}
+
+.user-info {
+  border-radius: 1px auto;
+  background-color: #5c71ce;
+  color: white;
+  max-width: 400px;
+  margin: 0 auto;
+  font-family: "Courier New", Courier, monospace;
+  text-decoration: none;
+  margin-top: 2%;
+  height: 100px;
+}
+
+.user-info h2,
+h4 {
+  color: white;
+}
+
+.user-info a {
+  text-decoration: none;
+}
+
+.user-info p {
+  color: white;
+  text-decoration: bold;
+}
+
+.article-data h4 {
+  color: black;
+}
+
+.article-data {
+  color: black;
+}
+
+.navh2 {
+  text-decoration: none;
+  color: rgb(255, 160, 17);
+}
+
+.links a {
+  text-decoration: none;
+  color: rgb(0, 4, 255);
+}
+
+.article-data {
+  border-radius: 1px auto;
+  background-color: #e58eff;
+  max-width: 350px;
+  margin: auto;
+  height: 150px;
+}
+
+.article-data h2,
+h3,
+p,
+h4 {
+  margin-top: 2.5%;
+}
+
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+
+.create button {
+  background: rgb(255, 160, 17);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
 }
